chore<ReplyService>:필요없는 코드 삭제